[package]
name = "retry-strategy"
version = "0.1.0"
edition = "2021"
authors = ["Zhang Peng"]
documentation = "https://docs.rs/retry-strategy"
homepage = "https://github.com/huster-zhangpeng/retry-strategy"
keywords = ["retry", "timeout", "async", "tokio", "utility"]
license = "MIT"
readme = "README.md"
description = "A better retry strategy set for tokio async futures"

[dependencies]
tokio = {version = "1", features = ["time", "rt", "macros", "net"]}
futures = "0.3"
pin-project = "1"

[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
